--- a/latex/assignment_2.tex
+++ b/latex/assignment_2.tex
@@ -145,12 +145,10 @@
 %	NAME AND CLASS SECTION
 %----------------------------------------------------------------------------------------
 
-\newcommand{\hmwkTitle}{Assignment\ \#1} % Assignment title
-\newcommand{\hmwkDueDate}{Monday,\ January\ 1,\ 2012} % Due date
-\newcommand{\hmwkClass}{COMPSCI\ 101} % Course/class
-\newcommand{\hmwkClassTime}{10:30am} % Class/lecture time
-\newcommand{\hmwkClassInstructor}{Jones} % Teacher/lecturer
-\newcommand{\hmwkAuthorName}{John Smith} % Your name
+\newcommand{\hmwkTitle}{Miniproject\ \#1} % Assignment title
+\newcommand{\hmwkClass}{Modeling and Verification} % Course/class
+\newcommand{\hmwkClassInstructor}{Anna Ingolfsdottir} % Teacher/lecturer
+\newcommand{\hmwkAuthorName}{Throstur and Saevar} % Your name
 
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
@@ -159,13 +157,13 @@
 \title{
 \vspace{2in}
 \textmd{\textbf{\hmwkClass:\ \hmwkTitle}}\\
-\normalsize\vspace{0.1in}\small{Due\ on\ \hmwkDueDate}\\
-\vspace{0.1in}\large{\textit{\hmwkClassInstructor\ \hmwkClassTime}}
+\vspace{0.1in}\large{\textit{\hmwkClassInstructor}}
 \vspace{3in}
 }
 
 \author{\textbf{\hmwkAuthorName}}
 \date{} % Insert date here if you want it to appear below your name
+\today
 
 %----------------------------------------------------------------------------------------
 
