fixored latex file git status my bad git status

--- a/latex/assignment_2.tex
+++ b/latex/assignment_2.tex
@@ -47,7 +47,7 @@
 % Set up the header and footer
 \pagestyle{fancy}
 \lhead{\hmwkAuthorName} % Top left header
-\chead{\hmwkClass\ (\hmwkClassInstructor\ \hmwkClassTime): \hmwkTitle} % Top center head
+\chead{\hmwkClass\ (\hmwkClassInstructor): \hmwkTitle} % Top center head
 \rhead{\firstxmark} % Top right header
 \lfoot{\lastxmark} % Bottom left footer
 \cfoot{} % Bottom center footer
@@ -203,7 +203,7 @@ Listing \ref{homework_example} shows a Perl script.
 
 \problemAnswer{
 \begin{center}
-\includegraphics[width=0.75\columnwidth]{example_figure} % Example image
+% \includegraphics[width=0.75\columnwidth]{example_figure} % Example image
 \end{center}
 
 \lipsum[3-5]
@@ -213,3 +213,4 @@ Listing \ref{homework_example} shows a Perl script.
 %----------------------------------------------------------------------------------------
 
 \end{document}
+
