--- a/latex/assignment_2.tex
+++ b/latex/assignment_2.tex
@@ -187,7 +187,7 @@
 % To have just one problem per page, simply put a \clearpage after each problem
 
 \begin{homeworkProblem}
-Listing \ref{homework_example} shows a Perl script.
+Listing \ref{../task2.ccs} shows a CCS script.
 
 \perlscript{../task2.ccs}{Sample Perl Script With Highlighting}
 
