--- a/latex/report.tex
+++ b/latex/report.tex
@@ -24,6 +24,7 @@
 %----------------------------------------------------------------------------------------
 
 \documentclass{article}
+%\documentclass[english,a4paper,twoside]{amsart}
 
 \usepackage{fancyhdr} % Required for custom headers
 \usepackage{lastpage} % Required to determine the last page for the footer
@@ -33,6 +34,10 @@
 \usepackage{listings} % Required for insertion of code
 \usepackage{courier} % Required for the courier font
 \usepackage{lipsum} % Used for inserting dummy 'Lorem ipsum' text into the template
+
+\usepackage[utf8]{inputenc}
+\usepackage[icelandic]{babel}
+\usepackage[T1]{fontenc}
 
 % Margins
 \topmargin=-0.45in
@@ -63,7 +68,7 @@
 
 \definecolor{MyDarkGreen}{rgb}{0.0,0.4,0.0} % This is the color used for comments
 \lstloadlanguages{Perl} % Load Perl syntax for listings, for a list of other languages supported see: ftp://ftp.tex.ac.uk/tex-archive/macros/latex/contrib/listings/listings.pdf
-\lstset{language=Perl, % Use Perl in this example
+\lstset{%language=Perl, % Use Perl in this example
         frame=single, % Single frame around code
         basicstyle=\small\ttfamily, % Use small true type font
         keywordstyle=[1]\color{Blue}\bf, % Perl functions bold and blue
@@ -147,8 +152,8 @@
 
 \newcommand{\hmwkTitle}{Miniproject\ \#1} % Assignment title
 \newcommand{\hmwkClass}{Modeling and Verification} % Course/class
-\newcommand{\hmwkClassInstructor}{Anna Ingolfsdottir} % Teacher/lecturer
-\newcommand{\hmwkAuthorName}{Throstur and Saevar} % Your name
+\newcommand{\hmwkClassInstructor}{Anna Ingolfsdóttir} % Teacher/lecturer
+\newcommand{\hmwkAuthorName}{Þröstur and Sævar} % Your name
 
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
