removed problemAnswer & lipsum in p2

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -191,8 +191,6 @@ Listing \ref{../task2.ccs} shows a CCS script.
 
 \perlscript{../task1.ccs}{Scheduler .CCS file}
 \perlscript{../task1.mu}{Scheduler .MU file}
-\perlscript{../task2.ccs}{1-Dimensional Solitaire .CCS file}
-\perlscript{../task2.mu}{1-Dimensional Solitaire .CCS file}
 
 \lipsum[1]
 \end{homeworkProblem}
@@ -204,13 +202,16 @@ Listing \ref{../task2.ccs} shows a CCS script.
 \begin{homeworkProblem}
 \lipsum[2]
 
-\problemAnswer{
-\begin{center}
-% \includegraphics[width=0.75\columnwidth]{example_figure} % Example image
-\end{center}
+\perlscript{../task2.ccs}{1-Dimensional Solitaire .CCS file}
+\perlscript{../task2.mu}{1-Dimensional Solitaire .CCS file}
 
-\lipsum[3-5]
-}
+% \problemAnswer{
+% \begin{center}
+% % \includegraphics[width=0.75\columnwidth]{example_figure} % Example image
+% \end{center}
+% 
+% \lipsum[3-5]
+% }
 \end{homeworkProblem}
 
 %----------------------------------------------------------------------------------------
