added (task1.*) to script cmds

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -196,7 +196,7 @@
 
     Listing \ref{../task1.ccs} shows the CCS code for a scheduler with four processes.
 
-    \perlscript{../task1.ccs}{Scheduler .CCS file}
+    \perlscript{../task1.ccs}{Scheduler .CCS file (task1.ccs)}
 
     There are two requirements that the scheduler must satisfy. The first requirement is that each process must start in a cyclical order, $P_{i+1}$ starts after $P_{i}$ and $P_1$ starts after $P_n$. The second requirement is that each cell must alternate between $a$ and $b$ actions.
 
@@ -235,7 +235,7 @@
 
     The scheduler was verifier with the file shown in listing \ref{../task1.mu} and foo bar bloo blah\ldots
 
-\perlscript{../task1.mu}{Scheduler .MU file}
+		\perlscript{../task1.mu}{Scheduler .MU file (task1.mu)}
 
 \end{homeworkProblem}
 
